--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^0.4.5",
     "grunt-babel": "^6.0.0",
     "grunt-contrib-uglify": "^0.11.1",
+    "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^3.4.0"
   }
 }
